@@ -1,3 +1,7 @@
+2016-08-11  Alan Modra  <amodra@gmail.com>
+
+	* gcc.target/powerpc/pr71680.c: New.
+
 2016-08-10  Kelvin Nilsen  <kelvin@gcc.gnu.org>
 
 	* gcc.target/powerpc/bfp/bfp.exp: New file.
